--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
     content="PARIS DECOR : entreprise de rénovation située à Épinay-sur-Seine. Peinture intérieure/extérieur, vitrerie, carrelage, pose de parquet, petites maçonneries et rénovation complète. Devis gratuit sous 24h.">
   <meta name="keywords"
     content="PARIS DECOR, peinture, vitrerie, carrelage, parquet, rénovation, Épinay-sur-Seine, 43.34Z, entreprise de bâtiment, Île-de-France">
+<!-- Open Graph (pour WhatsApp, Facebook, etc.) -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://akamidev.github.io/PARISDECOR/services.html">
+<meta property="og:title" content="PARIS DECOR | Peinture, Vitrerie, Carrelage & Parquet – Île-de-France">
+<meta property="og:description" content="Peinture, vitrerie, carrelage, parquet, cloisons & isolation en Île-de-France. Devis gratuit sous 24h.">
+<meta property="og:image" content="https://akamidev.github.io/PARISDECOR/assets/img/og-paris-decor.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="Logo PARIS DECOR">
 
+<!-- Twitter Card (fallback sur X et autres) -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="PARIS DECOR | Peinture, Vitrerie, Carrelage & Parquet – Île-de-France">
+<meta name="twitter:description" content="Peinture, vitrerie, carrelage, parquet, cloisons & isolation en Île-de-France.">
+<meta name="twitter:image" content="https://akamidev.github.io/PARISDECOR/assets/img/og-paris-decor.jpg">
+
+<!-- Optionnel mais utile -->
+<link rel="canonical" href="https://akamidev.github.io/PARISDECOR/services.html">
+<meta name="theme-color" content="#0d6efd">
   <!-- Favicons -->
   <link rel="icon" href="assets/img/favicon.ico" sizes="any">
   <link rel="icon" type="image/png" href="assets/img/favicon-32x32.png" sizes="32x32">
@@ -279,6 +297,26 @@
               <a href="quote.html" class="service-link">Demandez un devis gratuit <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
+
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="400">
+            <div class="service-card">
+              <div class="service-icon">
+                <i class="bi bi-hammer"></i>
+              </div>
+              <h3>Charpente & ossature bois</h3>
+              <p>Conception et montage de charpentes traditionnelles ou industrielles, extensions en ossature bois,
+                bardage et préparations de couverture (chevrons, liteaux, écran sous-toiture).</p>
+
+              <div class="service-features">
+                <span><i class="bi bi-check-circle"></i> Charpente traditionnelle/fermettes</span>
+                <span><i class="bi bi-check-circle"></i> Ossature bois & bardage</span>
+                <span><i class="bi bi-check-circle"></i> Renforts, traitement & étanchéité</span>
+              </div>
+
+              <a href="quote.html" class="service-link">Demander un devis charpente <i class="bi bi-arrow-right"></i></a>
+            </div>
+          </div>
+
         </div>
 
         <div class="row mt-5">
@@ -323,6 +361,17 @@
                     <p>Ouvertures, reprises d’enduits, seuils, rebouchage, ratissage et remise à niveau.</p>
                   </div>
                 </div>
+                <div class="service-list-item" data-aos="fade-up" data-aos-delay="300">
+  <div class="service-list-icon">
+    <i class="bi bi-hammer"></i>
+  </div>
+  <div class="service-list-content">
+    <h4>Petites charpentes & réparations bois</h4>
+    <p>Renforts de charpente, remplacement de pannes/solives, redressage et étaiement, reprises de liteaux
+      et chevrons, traitement fongicide/insecticide, scellements et finitions étanches.</p>
+  </div>
+</div>
+
               </div>
             </div>
           </div>
