--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://akamidev.github.io/PARISDECOR/services.html">
 <meta property="og:title" content="PARIS DECOR | Peinture, Vitrerie, Carrelage & Parquet – Île-de-France">
-<meta property="og:description" content="Peinture, vitrerie, carrelage, parquet, cloisons & isolation en Île-de-France. Devis gratuit sous 24h.">
+<meta property="og:description" content="Peinture, vitrerie, carrelage, parquet, cloisons & isolation, charpente et ossature bois, petites maçonneries et rénovation complète. en Île-de-France. Devis gratuit sous 24h.">
 <meta property="og:image" content="https://akamidev.github.io/PARISDECOR/assets/img/og-paris-decor.jpg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
